[gd_scene load_steps=27 format=2]

[ext_resource path="res://Assets/fx/enemy-death8.png" type="Texture" id=1]
[ext_resource path="res://Assets/fx/enemy-death5.png" type="Texture" id=2]
[ext_resource path="res://Assets/fx/enemy-death6.png" type="Texture" id=3]
[ext_resource path="res://Assets/fx/enemy-death9.png" type="Texture" id=4]
[ext_resource path="res://Assets/fx/enemy-death7.png" type="Texture" id=5]
[ext_resource path="res://Assets/fire-skull/fire-skull-no-fire.png" type="Texture" id=6]
[ext_resource path="res://Assets/fire-skull/fire-skull.png" type="Texture" id=7]
[ext_resource path="res://Hurtbox.tscn" type="PackedScene" id=8]
[ext_resource path="res://FlyingEnemy.gd" type="Script" id=9]
[ext_resource path="res://whiten_material.tres" type="Material" id=10]
[ext_resource path="res://Blinker.tscn" type="PackedScene" id=11]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 6 )
region = Rect2( 108, 0, 54, 70 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 6 )
region = Rect2( 54, 0, 54, 70 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 54, 70 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 7 )
region = Rect2( 96, 0, 96, 112 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 96, 112 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 7 )
region = Rect2( 192, 0, 96, 112 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 7 )
region = Rect2( 288, 0, 96, 112 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 7 )
region = Rect2( 384, 0, 96, 112 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 7 )
region = Rect2( 480, 0, 96, 112 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 7 )
region = Rect2( 576, 0, 96, 112 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 7 )
region = Rect2( 672, 0, 96, 112 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": false,
"name": "hurt",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 4 ) ],
"loop": false,
"name": "dead",
"speed": 6.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ) ],
"loop": false,
"name": "attack",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 4 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "flying",
"speed": 6.0
} ]

[sub_resource type="CircleShape2D" id=13]
radius = 17.7893

[sub_resource type="CircleShape2D" id=14]
radius = 17.618

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 128.125, 17.5135 )

[node name="FlyingEnemy" type="KinematicBody2D"]
z_index = 1
collision_layer = 2
collision_mask = 0
script = ExtResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = ExtResource( 10 )
position = Vector2( 0, -30 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 12 )
animation = "flying"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -23.6934 )
shape = SubResource( 13 )

[node name="Hurtbox" parent="." instance=ExtResource( 8 )]
position = Vector2( 0, -0.667419 )
collision_mask = 16
whiten_material = ExtResource( 10 )

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -23.026 )
shape = SubResource( 14 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, -12.487 )

[node name="SFX" type="AudioStreamPlayer2D" parent="."]
max_distance = 5000.0

[node name="PlayerDetect" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetect"]
position = Vector2( 0, -23.3608 )
shape = SubResource( 15 )

[node name="FleeTimer" type="Timer" parent="."]

[node name="Blinker" parent="." instance=ExtResource( 11 )]

[node name="ShootTimer" type="Timer" parent="."]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="body_entered" from="PlayerDetect" to="." method="_on_PlayerDetect_body_entered"]
[connection signal="timeout" from="FleeTimer" to="." method="_on_FleeTimer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]

[editable path="Hurtbox"]
